Fix: Add IP allowlist for Redis service in render.yaml

--- a/render.yaml
+++ b/render.yaml
@@ -27,6 +27,7 @@ services:
   - type: redis
     name: lewisham-hub-redis
     plan: free
+    ipAllowList: []
 
 databases:
   - name: lewisham-hub-db
