--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -43,4 +43,4 @@ HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
   CMD wget --no-verbose --tries=1 --spider http://localhost:8080/health || exit 1
 
 # Run the application
-CMD ["./main"] 
+CMD ["./main"] # Build trigger Wed Jul  2 11:56:31 PM BST 2025
