fix: provide individual database env vars instead of DATABASE_URL
- App expects DB_HOST, DB_USER, DB_PASSWORD, DB_NAME, DB_PORT
- Render provides these via database property references
- Added DB_SSL_MODE=require for production security
- This should fix the 'DB_PASSWORD environment variable is required' error

--- a/render.yaml
+++ b/render.yaml
@@ -6,10 +6,28 @@ services:
     healthCheckPath: /health
     plan: free
     envVars:
-      - key: DATABASE_URL
+      - key: DB_HOST
         fromDatabase:
           name: lewisham-hub-db
-          property: connectionString
+          property: host
+      - key: DB_PORT
+        fromDatabase:
+          name: lewisham-hub-db
+          property: port
+      - key: DB_USER
+        fromDatabase:
+          name: lewisham-hub-db
+          property: user
+      - key: DB_PASSWORD
+        fromDatabase:
+          name: lewisham-hub-db
+          property: password
+      - key: DB_NAME
+        fromDatabase:
+          name: lewisham-hub-db
+          property: database
+      - key: DB_SSL_MODE
+        value: require
       - key: REDIS_URL
         fromService:
           type: redis
