--- a/render.yaml
+++ b/render.yaml
@@ -1,6 +1,7 @@
 services:
+  # Backend API Service
   - type: web
-    name: lewisham-charity-hub
+    name: lewisham-charity-hub-api
     env: docker
     dockerfilePath: ./Dockerfile.production
     healthCheckPath: /health
@@ -42,6 +43,21 @@ services:
       - key: REFRESH_SECRET
         generateValue: true
 
+  # Frontend Next.js Service
+  - type: web
+    name: lewisham-charity-hub-frontend
+    env: docker
+    dockerfilePath: ./Dockerfile.frontend
+    healthCheckPath: /
+    plan: free
+    envVars:
+      - key: NEXT_PUBLIC_API_URL
+        sync: false
+        value: https://lewisham-charity-hub-api.onrender.com
+      - key: NODE_ENV
+        value: production
+
+  # Redis Service
   - type: redis
     name: lewisham-hub-redis
     plan: free
