fix: simplify frontend deployment for Render compatibility
- Switch from Docker to native Node.js runtime
- Add --legacy-peer-deps to handle React 19 dependency conflicts
- Remove standalone output from Next.js config
- Add .nvmrc to specify Node.js 18.18.0
- This should resolve Blueprint sync issues

--- a/render.yaml
+++ b/render.yaml
@@ -46,8 +46,10 @@ services:
   # Frontend Next.js Service
   - type: web
     name: lewisham-charity-hub-frontend
-    env: docker
-    dockerfilePath: ./Dockerfile.frontend
+    env: node
+    region: oregon
+    buildCommand: cd frontend && npm install --legacy-peer-deps && npm run build
+    startCommand: cd frontend && npm start
     healthCheckPath: /
     plan: free
     envVars:
