feat: add simplified frontend-only Blueprint
- Create render-frontend.yaml for frontend-only deployment
- Configure to use existing backend at lewisham-charity-hub.onrender.com
- This avoids conflicts with existing backend service
- Frontend can be deployed separately using this Blueprint

--- a/render.yaml
+++ b/render.yaml
@@ -55,7 +55,7 @@ services:
     envVars:
       - key: NEXT_PUBLIC_API_URL
         sync: false
-        value: https://lewisham-charity-hub-api.onrender.com
+        value: https://lewisham-charity-hub.onrender.com
       - key: NODE_ENV
         value: production
 
