--- a/render-frontend.yaml
+++ b/render-frontend.yaml
@@ -11,6 +11,6 @@ services:
     envVars:
       - key: NEXT_PUBLIC_API_URL
         sync: false
-        value: https://lewisham-charity-hub.onrender.com
+        value: https://lewisham-charity-hub-api.onrender.com
       - key: NODE_ENV
         value: production 
