Deploy: Complete full-stack deployment configuration
- Consolidated frontend and backend services into single render.yaml
- Removed separate render-frontend.yaml to avoid confusion
- Frontend service properly configured with correct API URL
- Both services will now deploy together from main configuration

Frontend: Node.js environment with proper build/start commands
Backend: Docker environment with all database and Redis connections
Environment: Production-ready with correct API endpoints

--- a/render.yaml
+++ b/render.yaml
@@ -1,4 +1,20 @@
 services:
+  # Frontend Next.js Service
+  - type: web
+    name: lewisham-charity-hub
+    env: node
+    region: oregon
+    buildCommand: cd frontend && npm install --legacy-peer-deps && npm run build
+    startCommand: cd frontend && npm start
+    healthCheckPath: /
+    plan: free
+    envVars:
+      - key: NEXT_PUBLIC_API_URL
+        sync: false
+        value: https://lewisham-charity-hub-api.onrender.com
+      - key: NODE_ENV
+        value: production
+
   # Backend API Service
   - type: web
     name: lewisham-charity-hub-api
