Fix: Switch backend from Docker to native Go environment
- Changed backend API service from Docker to Go environment
- Avoids Docker buildkit connectivity issues on Render
- More explicit build command with mod download and verify
- Simplified deployment process while maintaining functionality

Build process now:
1. Downloads and verifies Go modules
2. Builds native Go binary with optimized flags
3. Runs directly without Docker overhead

This should resolve the 'could not connect to buildkit' error.

--- a/render.yaml
+++ b/render.yaml
@@ -18,8 +18,10 @@ services:
   # Backend API Service
   - type: web
     name: lewisham-charity-hub-api
-    env: docker
-    dockerfilePath: ./Dockerfile.production
+    env: go
+    region: oregon
+    buildCommand: cd backend && go mod download && go mod verify && go build -ldflags="-w -s" -o main ./cmd/api
+    startCommand: cd backend && ./main
     healthCheckPath: /health
     plan: free
     envVars:
