--- a/Dockerfile.production
+++ b/Dockerfile.production
@@ -1,52 +1,23 @@
-# Production Dockerfile for Lewisham Charity Hub
-FROM golang:1.23-alpine AS builder
-
-# Install build dependencies
-RUN apk add --no-cache git ca-certificates tzdata
-
-WORKDIR /app
-
-# Copy go mod files first for better caching
-COPY backend/go.mod backend/go.sum ./
-
-# Download dependencies
-RUN go mod download && go mod verify
-
-# Copy the rest of the backend code
-COPY backend/ .
-
-# Build the application
-RUN CGO_ENABLED=0 GOOS=linux GOARCH=amd64 go build \
-    -a -installsuffix cgo \
-    -ldflags="-w -s -X main.version=1.0.0" \
-    -o main ./cmd/api
-
-# Final stage
-FROM alpine:latest
+# Simplified Dockerfile for Lewisham Charity Hub
+FROM golang:1.23-alpine
 
 # Install runtime dependencies
 RUN apk --no-cache add ca-certificates tzdata
 
 WORKDIR /app
 
-# Copy binary and docs
-COPY --from=builder /app/main .
-COPY --from=builder /app/docs ./docs/
+# Copy go mod files and download dependencies
+COPY backend/go.mod backend/go.sum ./
+RUN go mod download && go mod verify
 
-# Create a non-root user
-RUN addgroup -g 1001 -S appgroup && \
-    adduser -S appuser -u 1001 -G appgroup
+# Copy the backend source code
+COPY backend/ .
 
-# Change ownership of the app directory
-RUN chown -R appuser:appgroup /app
-USER appuser
+# Build the application
+RUN go build -ldflags="-w -s" -o main ./cmd/api
 
 # Expose port
 EXPOSE 8080
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
-  CMD wget --no-verbose --tries=1 --spider http://localhost:8080/health || exit 1
 
 # Run the application
 CMD ["./main"]
