Fix: Resolve blueprint sync failure by fixing Redis URL reference
- Changed REDIS_URL from fromService reference to direct value
- This was causing the blueprint sync to fail because you cannot reference
  services defined in the same blueprint file
- Now using direct Redis URL format: redis://lewisham-hub-redis:6379
- This should allow the blueprint to sync successfully

--- a/render.yaml
+++ b/render.yaml
@@ -42,10 +42,7 @@ services:
       - key: DB_SSLMODE
         value: require
       - key: REDIS_URL
-        fromService:
-          type: redis
-          name: lewisham-hub-redis
-          property: connectionString
+        value: redis://lewisham-hub-redis:6379
       - key: PORT
         value: "8080"
       - key: GIN_MODE
