feat: Add remaining configuration and deployment files
- Add Docker configuration files (.dockerignore, docker-compose.yml)
- Include environment configuration (.env template, .gitignore)
- Add backend and frontend project structures
- Include deployment and development configuration
- Add comprehensive project structure for full-stack application

Configuration includes:
- Docker multi-service setup with database, backend, and frontend
- Environment variable templates for secure configuration
- Gitignore rules for proper version control
- Development and production deployment configurations
- Complete project scaffolding for immediate development start

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,15 +1,15 @@
-# Database Configuration
+# Database Configuration (Docker setup)
 DB_HOST=localhost
-DB_PORT=5432
-DB_USER=postgres
-DB_PASSWORD=your_password_here
-DB_NAME=lewisham_charity
+DB_PORT=5433
+DB_USER=usr
+DB_PASSWORD=pwd
+DB_NAME=lewisham_hub
 DB_SSLMODE=disable
 
-# Redis Configuration
-REDIS_ADDR=localhost:6379
+# Redis Configuration (Docker setup)
+REDIS_ADDR=localhost:6380
 REDIS_HOST=localhost
-REDIS_PORT=6379
+REDIS_PORT=6380
 REDIS_PASSWORD=
 REDIS_DB=0
 
