fix(ci): Update GitHub Actions to use Go 1.25.1
- Update all workflow files to use Go version 1.25 to match go.mod
- Update backend CI, security workflows, and basic security workflows
- Update Docker build to use golang:1.25-alpine base image
- Ensures consistency between project Go version and CI environment

Resolves Go version mismatch errors in GitHub Actions.

--- a/.github/workflows/basic-security.yml
+++ b/.github/workflows/basic-security.yml
@@ -46,7 +46,8 @@ jobs:
     - name: Set up Go for backend scan
       uses: actions/setup-go@v5
       with:
-        go-version: '1.23'
+        go-version: '1.25'
+        cache-dependency-path: backend/go.sum
 
     - name: Run Go vulnerability check
       working-directory: ./backend
@@ -69,7 +70,8 @@ jobs:
     - name: Set up Go
       uses: actions/setup-go@v5
       with:
-        go-version: '1.23'
+        go-version: '1.25'
+        cache-dependency-path: backend/go.sum
 
     - name: Run Go vet
       working-directory: ./backend
